# telemega-notes

./: .gbp.conf  .gitignore  ChangeLog  Makefile.am  Releasing  TMARBLE-TRNG  altos_1.1.1.orig.tar.gz.delta  altos_1.1.1.orig.tar.gz.id  altos_1.1.orig.tar.gz.delta  altos_1.2.1.orig.tar.gz.delta  altos_1.2.1.orig.tar.gz.id  altos_1.3.1.orig.tar.gz.delta  altos_1.3.1.orig.tar.gz.id  altos_1.3.2.orig.tar.gz.delta  altos_1.3.2.orig.tar.gz.id  altos_1.3.orig.tar.gz.delta  altos_1.3.orig.tar.gz.id  altos_1.4.orig.tar.gz.delta  altos_1.4.orig.tar.gz.id  altos_1.6.1.orig.tar.gz.delta  altos_1.6.1.orig.tar.gz.id  altos_1.6.2.orig.tar.gz.delta  altos_1.6.2.orig.tar.gz.id  altos_1.6.3.orig.tar.gz.delta  altos_1.6.3.orig.tar.gz.id  altos_1.6.4.orig.tar.gz.delta  altos_1.6.4.orig.tar.gz.id  altos_1.6.5.orig.tar.gz.delta  altos_1.6.5.orig.tar.gz.id  altos_1.6.8.orig.tar.gz.delta  altos_1.6.8.orig.tar.gz.id  altos_1.7.orig.tar.gz.delta  altos_1.7.orig.tar.gz.id  altos_1.8.1.orig.tar.gz.delta  altos_1.8.1.orig.tar.gz.id  altos_1.8.2.orig.tar.gz.delta  altos_1.8.2.orig.tar.gz.id  altos_1.8.3.orig.tar.gz.delta  altos_1.8.3.orig.tar.gz.id  altos_1.8.4.orig.tar.gz.delta  (+50 more)
altosdroid/: .gitignore  AndroidManifest.xml  AndroidManifest.xml.in  Makefile.am  Notebook  ant.properties  build.xml  buildinfo.sh  local.properties  project.properties
altosdroid/app/: build.gradle  build.gradle.in
altosdroid/app/src/main/: AndroidManifest.xml.in
altosdroid/app/src/main/java/org/altusmetrum/AltosDroid/: AltosBluetooth.java  AltosDebug.java  AltosDroid.java  AltosDroidLink.java  AltosDroidMapInterface.java  AltosDroidTab.java  (+26 more)
altosdroid/app/src/main/res/layout/: idle_mode.xml  manage_frequencies.xml  tab_flight.xml  tab_layout.xml  tab_map.xml  tab_pad.xml  tab_recover.xml
altosdroid/app/src/main/res/values/: CustomTheme.xml  strings.xml
altosdroid/res/layout/: device_list.xml  frequency.xml  idle_mode.xml  igniter_status.xml  igniters.xml  manage_frequencies.xml  map_preload.xml  map_type.xml  setup.xml  tab_flight.xml  tab_map.xml  tab_map_offline.xml  tab_pad.xml  tab_recover.xml
altosdroid/res/menu/: option_menu.xml
altosdroid/res/values/: Colors.xml  CustomTheme.xml  array.xml  arrays.xml  strings.xml
altosdroid/res/xml/: preferences.xml
altosdroid/src/org/altusmetrum/AltosDroid/: AltosBluetooth.java  AltosDebug.java  AltosDroid.java  AltosDroidLink.java  AltosDroidMapInterface.java  AltosDroidMapSourceListener.java  AltosDroidPreferences.java  AltosDroidPreferencesBackend.java  AltosDroidTab.java  AltosMapOffline.java  AltosMapOnline.java  AltosMapView.java  AltosPreferencesUI.java  AltosUsb.java  AltosViewPager.java  AltosVoice.java  BluetoothChatService.java  DeviceAddress.java  DeviceListActivity.java  GoNoGoLights.java  IdleModeActivity.java  IgniterActivity.java  ManageFrequenciesActivity.java  MapTypeActivity.java  PreloadMapActivity.java  SetupActivity.java  TabAscent.java  TabDescent.java  TabFlight.java  TabLanded.java  TabMap.java  TabMapOffline.java  TabPad.java  TabRecover.java  TabsAdapter.java  TelemetryLogger.java  TelemetryReader.java  TelemetryService.java  TelemetryState.java
altoslib/: AltosAccel.java  AltosAccelCal.java  AltosAccelCalListener.java  AltosAdxl375.java  AltosCRCException.java  AltosCSV.java  AltosCalData.java  AltosCompanion.java  AltosConfigData.java  AltosConfigDataException.java  AltosConfigValues.java  AltosConvert.java  AltosDataListener.java  AltosDataProvider.java  AltosDebug.java  AltosDistance.java  AltosEeprom.java  AltosEepromChunk.java  AltosEepromDownload.java  AltosEepromFile.java  AltosEepromFireTwo.java  AltosEepromGPS.java  AltosEepromHeader.java  AltosEepromIterable.java  AltosEepromList.java  AltosEepromLog.java  AltosEepromMega.java  AltosEepromMetrum2.java  AltosEepromMini.java  AltosEepromMonitor.java  AltosEepromNew.java  AltosEepromRecord.java  AltosEepromRecordFireTwo.java  AltosEepromRecordFull.java  AltosEepromRecordGps.java  AltosEepromRecordMega.java  AltosEepromRecordMetrum.java  AltosEepromRecordMicroPeak2.java  AltosEepromRecordMini.java  AltosEepromRecordMotor.java  (+150 more)
altoslib/src/org/altusmetrum/AltosLib/: AltosConfigData.java  AltosEepromLog.java  AltosFrequency.java  AltosRecord.java  AltosTelemetry.java  AltosTelemetryRecordLegacy.java
ao-tools/ao-fakeflight/: Makefile.am  ao-fake-convert.c  ao-fake-log.c  ao-fakeflight.c  ao-fakeflight.h  ao-physics.c  ao-rocket.c
ao-tools/ao-sendfake/: Makefile.am  ao-sendfake.1  ao-sendfake.c
ao-tools/ao-test-pressure/: .gitignore  Makefile.am  ao-test-pressure.1  ao-test-pressure.c
icon/: .gitignore  Makefile.am  altus-metrum.rc  make-png  micro-peak.rc  telegps.rc  windows-stub.c
libaltos/: .gitignore  Makefile-standalone  Makefile.am  libaltos.c  libaltos.dylib  libaltos.h  libaltos.i0  libaltos_common.c  libaltos_darwin.c  libaltos_linux.c  libaltos_posix.c  libaltos_posix.h  libaltos_private.h  libaltos_windows.c
map-server/altos-map/: .gitignore  AltosMap.java  Makefile.am  Manifest.txt  altos-map-fake  altos-map.c  altos-mapc-fake
map-server/altos-mapd/: .gitignore  AltosMapd.java  AltosMapdClient.java  AltosMapdPreferences.java  AltosMapdServer.java  Makefile.am  Manifest.txt  altos-mapd-default  altos-mapd.service
teststand/: Altos.java  AltosAscent.java  AltosChannelMenu.java  AltosCompanionInfo.java  AltosConfigFC.java  AltosConfigFCUI.java  AltosConfigPyroUI.java  AltosConfigTD.java  AltosConfigTDUI.java  AltosConfigureUI.java  AltosDescent.java  AltosDevice.java  AltosFlightStatus.java  AltosFlightStatusTableModel.java  AltosFlightStatusUpdate.java  AltosFlightUI.java  AltosGraphUI.java  AltosIdleMonitorUI.java  AltosIgniteUI.java  AltosIgnitor.java  AltosLanded.java  AltosLaunch.java  AltosLaunchUI.java  AltosPad.java  AltosVersion.java  Info.plist.in  Makefile.am  ReadMe-Mac.rtf  TestStand.java  TestStandConfig.java  TestStandConfigUI.java  TestStandDataPoint.java  TestStandDisplayThread.java  TestStandGraph.java  TestStandGraphUI.java  TestStandInfo.java  TestStandPreferences.java  TestStandState.java  TestStandStatus.java  TestStandStatusUpdate.java  (+5 more)
(+1687 files in other folders)
